# concon

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  demo.sh  iso5.m
src/MeshLib/: AVLTree.h  BarryCentric.cpp  BarryCentric.h  Chain.cpp  Chain.h  DList.h  Edge.cpp  Edge.h  FException.cpp  FException.h  Face.cpp  Face.h  FaceNormalTrait.h  HalfEdge.cpp  HalfEdge.h  MeshLib.hpp  Point.cpp  Point.h  SList.h  Solid.cpp  Solid.h  TopologyException.cpp  TopologyException.h  Trait.cpp  Trait.h  Vector4.cpp  Vector4.h  Vertex.cpp  Vertex.h  comparitors.cpp  comparitors.hpp  iterators.h  string_token_iterator.h  vertexPlaneTrait.h
src/c3/: cc_kernel.cpp  cc_kernel.hpp  check_flip.h  csv.h  main.cpp  prototype_sop.cpp  prototype_sop.hpp  sigma_opt.cpp  sigma_opt.hpp  subject.cpp  subject.hpp  subject_factory.cpp  subject_factory.hpp
src/c3/g_ops/: bandwidth_average.cpp  bandwidth_average.hpp  bary_to_sphere.cpp  bary_to_sphere.hpp  create_group_label_mask.cpp  create_group_label_mask.hpp  create_group_mask.cpp  create_group_mask.hpp  merge_marginals.cpp  merge_marginals.hpp  trk_counts_per_face.cpp  trk_counts_per_face.hpp
src/c3/s_ops/: bandwidth_estimation.cpp  bandwidth_estimation.hpp  compute_kernel.cpp  compute_kernel.hpp  effective_connectivity.cpp  effective_connectivity.hpp  integrate_label.cpp  integrate_label.hpp  surface_intersect.cpp  surface_intersect.hpp
src/trk/: trackset.cpp  trackset.hpp  trk.cpp  trk.hpp
src/utils/: interface.cpp  interface.hpp  oct_tree.cpp  oct_tree.hpp  quad_tree.cpp  quad_tree.hpp
